--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<meta http-equiv="refresh" content="0; url=https://vclan.github.io/startbootstrap-freelancer-gh-pages/index.html" />
+</html>
