--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta http-equiv="refresh" content="0; url=" />
+<meta http-equiv="refresh" content="0; url=https://epicflameburst.github.io/startbootstrap-creative-gh-pages/" />
 </html>
