--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="#services">Games</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Craetors</a>
+                        <a class="page-scroll" href="#portfolio">Creators</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
