--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -86,7 +86,7 @@
                     <h2 class="section-heading">We've got Game!</h2>
                     <hr class="light">
                     <p class="text-faded">We have many games that a lot of people can enjoy from multi player to single player every body can have some game fun .All of the games have very good reputations and best of all the games are free! </p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">I Want To Play Games!</a>
                 </div>
             </div>
         </div>
