--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -53,10 +53,10 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Games</a>
+                        <a class="page-scroll" href="#creators">Creators</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Creators</a>
+                        <a class="page-scroll" href="#portfolio">gamess</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -86,7 +86,7 @@
                     <h2 class="section-heading">We've got Game!</h2>
                     <hr class="light">
                     <p class="text-faded">We have many games that a lot of people can enjoy from multi player to single player every body can have some game fun .All of the games have very good reputations and best of all the games are free! </p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">I Want To Play Games!</a>
+                    <a href="#Creators" class="page-scroll btn btn-default btn-xl sr-button">I Want To Play Games!</a>
                 </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">Creators</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -106,29 +106,29 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <h3>Brian guan</h3>
+                        <p class="text-muted">Brian Guan is a 5th grade coder. He is really interested in coding and knows a lot about it</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <h3>Varun Venkatesh</h3>
+                        <p class="text-muted">Varun Venkatesh is a bright handsome young man who knows a lot about coding. He is experienced and helped create this website.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <h3>Rohit Naidu</h3>
+                        <p class="text-muted">Rohit Naidu is a creative bright boy who loves coding and playing Video Games. He has a lot of expertise in many things.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <h3>Carson Choe</h3>
+                        <p class="text-muted">Carson Choe is a smart young man who has a lot of achievements.He is learning how to code. He loves dogs and video games!</p>
                     </div>
                 </div>
             </div>
@@ -140,14 +140,14 @@
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                        <img src="http://www.addictinggames.com/a/img/agLogo_n.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Addicting
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Games.com
                                 </div>
                             </div>
                         </div>
@@ -235,8 +235,8 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+                <h2><i>Contact</i></h2>
+                
             </div>
         </div>
     </aside>
@@ -247,15 +247,15 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Want to Contact us to know more?Contact us now!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>5627902883920</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:Vclanisboss@gmail.com">vclanisboss@gmail.com</a></p>
                 </div>
             </div>
         </div>
