--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -135,13 +135,12 @@
         </div>
     </section>
 
-   <a href="https://sites.google.com/a/mydusd.org/game-nerds/home">Visit Epicflameburst!</a>
+
 
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2><i>Contact</i></h2>
-                
+                   <h2><a href="https://sites.google.com/a/mydusd.org/game-nerds/home">Visit Epicflameburst!</a></h2>
             </div>
         </div>
     </aside>
