--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
     </header>
-
+<a href="#bootstrap-chat-example">Find Out More</a>
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
