--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -61,6 +61,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                         <li>
+                        <a class="page-scroll" href="">Chat</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -78,7 +81,7 @@
             </div>
         </div>
     </header>
-<a href="#bootstrap-chat-example">Find Out More</a>
+
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
