--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -61,9 +61,7 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
-                         <li>
-                        <a class="page-scroll" href="">Chat</a>
-                    </li>
+                  
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -143,7 +141,7 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                   <h2><a href="https://sites.google.com/a/mydusd.org/game-nerds/home">Visit Epicflameburst!</a></h2>
+                   <h2><a href="">Visit Epicflameburst!</a></h2>
             </div>
         </div>
     </aside>
