--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -180,6 +180,6 @@
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
 
-</body>
+</body><div class="col-lg-3 col-md-6 text center"> 
 
 </html>
