--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -183,3 +183,8 @@
 </body><div class="col-lg-3 col-md-6 text center"> 
 
 </html>src="vendor/jquery/jquery.min.js"></script>
+<OBJECT ID="Player" height="0" width="0"
+  CLASSID="CLSID:6BF52A52-394A-11d3-B153-00C04F79FAA6">
+</OBJECT>
+
+
