--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>5627902883920</p>
+                    <p>0560298292</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
@@ -180,11 +180,35 @@
     <!-- Theme JavaScript -->
     <script src="js/creative.min.js"></script>
 
-</body><div class="col-lg-3 col-md-6 text center"> 
-
-</html>src="vendor/jquery/jquery.min.js"></script>
+</body><div class="col-lg-3 col-md-6 text center">
+    <HTML>
+<HEAD>
+</HEAD>
+<BODY>
 <OBJECT ID="Player" height="0" width="0"
   CLASSID="CLSID:6BF52A52-394A-11d3-B153-00C04F79FAA6">
 </OBJECT>
+<INPUT TYPE="BUTTON" NAME="BtnPlay" VALUE="Play" OnClick="StartMeUp()">
+<INPUT TYPE="BUTTON" NAME="BtnStop" VALUE="Stop" OnClick="ShutMeDown()">
+<SCRIPT>
+<!--
+
+function StartMeUp ()
+{
+    Player.URL = "laure.wma";
+}
+
+function ShutMeDown ()
+{
+    Player.controls.stop();
+}
+
+-->
+</SCRIPT>
+</BODY>
+</HTML>
+
+
+
 
 
