--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -131,6 +131,12 @@
                         <h3>Carson Choe</h3>
                         <p class="text-muted">Carson Choe is a smart young man who has a lot of achievements.He is learning how to code. He loves dogs and video games!</p>
                     </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="http://upload.wikimedia.org/wikipedia/commons/b/bb/Icon_dog.gif"></i>
+                        <h3>Maximus Tran</h3>
+                        <p class="text-muted">Maximus is fatso</p>
+                    </div>
                 </div>
             </div>
         </div>
