--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -135,7 +135,7 @@
                     <div class="service-box">
                         <i class="http://upload.wikimedia.org/wikipedia/commons/b/bb/Icon_dog.gif"></i>
                         <h3>Maximus Tran</h3>
-                        <p class="text-muted">Maximus is fatso</p>
+                        <p class="text-muted">Maximus is awesome</p>
                     </div>
                 </div>
             </div>
